# skiff

./: .gcloudignore  .gitattributes  .gitignore  .nemesis8.toml  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  runbook_pi.md  skiff_boat_state.json
mcp/: skiff_mcp.py
media/: skiff-architecture.md
opencpn/bridge/: CMakeLists.txt  README.md  fetch-deps.ps1
opencpn/bridge/src/: bridge_pi.cpp  http_bridge.cpp  http_bridge.h
opencpn/mcp/: README.md  server.js
opencpn/mcp/tools/: build-grenada-mbtiles.js  check-route.js
pi-provision/: setup.sh
plan/: fixingthesim.md.txt  fixingthesim_implementation.md  force_feedback_fix.md  mcp_no_install_access.md  ocpn_bridge_plugin_spec.md  opencpn_plugin_guidance.md  opencpn_signalk_observations.md  overarching_architecture.md  pi_backend_contract.md  sail-fixes-round2.md  sail-force-rig.html  sails_as_data.md
src/: cat_physics.rs  cli.rs  dto.rs  lib.rs  main.rs  mcp.rs  signalk.rs  world.rs
src/boat/: castoff.rs  leeway.rs  mod.rs  polar.rs  profile.rs  wave_penalty.rs
src/core/: error.rs  geo.rs  mod.rs  time.rs  units.rs  vec2.rs
src/env/: cache.rs  field.rs  interpolate.rs  metocean.rs  mod.rs  provider.rs
src/route/: constraints.rs  cost.rs  isochrone.rs  mod.rs  prune.rs
src/sim/: integrator.rs  mod.rs  state.rs  step.rs
web/: index.html  monitor_sim.py  package-lock.json  package.json  vite.config.ts
web/public/: lagoon-450s.manifest.json  sail-jib.glb  sail-main.glb
web/public/world/: grenada.geojson  grenada_bathy.json
web/src/: App.tsx
web/src/components/: AuthButton.tsx  BoatModel.tsx  ControlsPanel.tsx  FlowVisualization.tsx  Hud.tsx  Island.tsx  KeyboardControls.tsx  SailTelemetryPanel.tsx  SimulatorScene.tsx  SpinnakerSail.tsx  Trail.tsx  Vectors.tsx  Water.tsx
web/src/sim/: auth.ts  boatPhysics.ts  environment.ts  math.ts  store.ts  types.ts
web/src/styles/: app.css
